# routes/booking_routes.go
@@ -10,11 +10,10 @@ func RegisterBookingRoutes(r fiber.Router) {
 	r.Get("/", handlers.GetBookings)
 	r.Get("/:id", handlers.GetBooking)
 	r.Post("/", handlers.CreateBooking)
-	r.Patch("/:id", handlers.UpdateBooking)
 	r.Delete("/:id", handlers.DeleteBooking)
 
-	r.Post("/:id/checkin", handlers.CheckinBooking)
-	r.Post("/:id/checkout", handlers.CheckoutBooking)
+	r.Post("/:id/checkin", handlers.ConfirmUserAtParkingForSuccessBooking)
+	r.Post("/:id/complete", handlers.CompleteBookingPayment)
 	r.Post("/:id/cancel", handlers.CancelBooking)
 
 	r.Get("/history", handlers.GetUserBookingHistory)
